--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -13,6 +13,8 @@
     />
     <link rel="stylesheet" href="style.css" />
     <style>
+      /* ---------------------------------PROGRESS BAR */
+
       p {
         margin-block: 0;
       }
@@ -20,14 +22,9 @@
         display: grid;
         place-content: center;
       }
-
       .overskrift {
         font-size: var(--abonnement-text-info);
         font-family: var(--font-body);
-        font-weight: var(--font-weight-normal);
-      }
-
-      .overskrift1 {
         font-weight: var(--font-weight-bold);
       }
 
@@ -64,6 +61,12 @@
         z-index: 1;
       }
 
+      .ball2,
+      .ball3 {
+        background-color: var(--color-abonnement-bar-active);
+        z-index: 1;
+      }
+
       .line1,
       .line2,
       .line3 {
@@ -71,6 +74,11 @@
         height: 0px;
         border: solid 2px var(--color-abonnement-bar-disabled);
         margin-left: -3px;
+      }
+
+      .line1,
+      .line2 {
+        border: solid 2px var(--color-abonnement-bar-active);
       }
 
       @media (min-width: 900px) {
@@ -103,12 +111,29 @@
           height: 0px;
           border: 5px solid var(--color-abonnement-bar-disabled);
         }
+
+        /* ---------------------------------RADIO BUTTONS */
+        input {
+          margin: 0;
+          font-size: var(--body-mobile);
+          accent-color: var(--rust-500);
+          width: 1.15em;
+          height: 1.15em;
+          border: 0.15em solid black;
+          border-radius: 50%;
+        }
+
+        @media (min-width: 900px) {
+          input {
+            font-size: var(--body-desktop);
+          }
+        }
       }
     </style>
   </head>
   <body class="bg-background-color">
     <!--------------------------------------------------------------------- HEADER -->
-    <a href="abonnement.html">tilbage</a>
+    <a href="abonnement2.html">tilbage</a>
     <header class="mb-10 bg-rust-400 font-medium text-color-black">
       <div
         class="grid gap-0.5 py-1 text-center font-font-body text-abonnement-text-info"
@@ -138,7 +163,7 @@
             </div>
 
             <div>
-              <p class="overskrift -ml-1.5 text-rust-200 lg:-ml-2">Stil</p>
+              <p class="overskrift -ml-1.5 text-rust-500 lg:-ml-2">Stil</p>
               <div class="bar2">
                 <a href="abonnement2.html"
                   ><div class="ball2">
@@ -149,7 +174,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-2 text-rust-200 lg:-ml-5">Duft</p>
+              <p class="overskrift -ml-2 text-rust-500 lg:-ml-5">Duft</p>
               <div class="bar3">
                 <a href="abonnement3.html"
                   ><div class="ball3">
@@ -176,127 +201,57 @@
       <!---------------------------------------------- FØRSTE SEKTION -->
       <section class="text-center">
         <h1 class="font-main-heading text-h1-mobile">
-          Hvilken størrelse buket ønsker du?
+          Er du sensitiv over for stærk blomsterduft?
         </h1>
-        <p
+        <article
           class="mx-auto py-l-spacing-mobile text-left font-font-body text-body-mobile"
         >
-          Du kan vælge mellem 4 forskellige størrelser af buket; mini, lille,
-          mellem og stor. Størrelsen har ingen påvirkning på designet af
-          buketten, kun størrelsen!
-        </p>
+          <h2 class="pb-xxs-spacing-mobile">
+            Vi spørger fordi nogle kan være ekstra sensitive over for stærke
+            dufte, og vi vil gerne sørge for, at du er så tilfreds med dit buket
+            som muligt!
+          </h2>
+          <h2 class="">
+            Dit svar kan have indflydelse på hvilke blomster der kommer i din
+            buket.
+          </h2>
+        </article>
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
-      <section class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile">
-        <!-- CARD 1 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
+      <section class="flex justify-around">
+        <article class="flex items-baseline gap-xs-spacing-mobile">
+          <div>
+            <label class="form-control">
+              <input
+                class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                type="radio"
+                name="radio"
+              />
+            </label>
           </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 60x50x40 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Mini</p>
-              <p>400,- DKK</p>
-            </div>
-          </div>
+          <h3 class="font-font-body text-body-mobile">Ja</h3>
         </article>
 
-        <!-- CARD 2 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
+        <article class="flex items-baseline gap-xs-spacing-mobile">
+          <div>
+            <label class="form-control">
+              <input
+                class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                type="radio"
+                name="radio"
+              />
+            </label>
           </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 60x50x40 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Lille</p>
-              <p>600,- DKK</p>
-            </div>
-          </div>
-        </article>
-
-        <!-- CARD 3 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
-          </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 80x60x50 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Mellem</p>
-              <p>800,- DKK</p>
-            </div>
-          </div>
-        </article>
-
-        <!-- CARD 4 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
-          </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 80x60x50 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Stor</p>
-              <p>1000,- DKK</p>
-            </div>
-          </div>
+          <h3 class="font-font-body text-body-mobile">Nej</h3>
         </article>
       </section>
 
       <!---------------------------------------------- TREDJE SEKTION -->
-      <section class="flex place-content-center pb-xxl-spacing-mobile">
-        <a href="abonnement2.html"
+      <section
+        class="flex place-content-center pt-l-spacing-mobile pb-xxl-spacing-mobile"
+      >
+        <a href="abonnement4.html"
           ><button
             class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
           >
