--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -13,6 +13,11 @@
     />
     <link rel="stylesheet" href="style.css" />
     <style>
+      /* header p {
+        font-weight: var(--font-weight-bold);
+      } */
+      /* ---------------------------------PROGRESS BAR */
+
       p {
         margin-block: 0;
       }
@@ -20,14 +25,9 @@
         display: grid;
         place-content: center;
       }
-
       .overskrift {
         font-size: var(--abonnement-text-info);
         font-family: var(--font-body);
-        font-weight: var(--font-weight-normal);
-      }
-
-      .overskrift1 {
         font-weight: var(--font-weight-bold);
       }
 
@@ -59,7 +59,10 @@
         color: var(--color-abonnement-bar-text);
       }
 
-      .ball1 {
+      .ball1,
+      .ball2,
+      .ball3,
+      .ball4 {
         background-color: var(--color-abonnement-bar-active);
         z-index: 1;
       }
@@ -71,6 +74,12 @@
         height: 0px;
         border: solid 2px var(--color-abonnement-bar-disabled);
         margin-left: -3px;
+      }
+
+      .line1,
+      .line2,
+      .line3 {
+        border: solid 2px var(--color-abonnement-bar-active);
       }
 
       @media (min-width: 900px) {
@@ -108,7 +117,7 @@
   </head>
   <body class="bg-background-color">
     <!--------------------------------------------------------------------- HEADER -->
-    <a href="abonnement.html">tilbage</a>
+    <a href="abonnement3.html">tilbage</a>
     <header class="mb-10 bg-rust-400 font-medium text-color-black">
       <div
         class="grid gap-0.5 py-1 text-center font-font-body text-abonnement-text-info"
@@ -119,8 +128,8 @@
     </header>
 
     <main>
-      <!-- PROGRESS BAR START -->
       <section>
+        <!-- PROGRESS BAR START -->
         <article
           class="grid place-content-center pb-l-spacing-mobile lg:pb-l-spacing-desktop"
         >
@@ -138,7 +147,7 @@
             </div>
 
             <div>
-              <p class="overskrift -ml-1.5 text-rust-200 lg:-ml-2">Stil</p>
+              <p class="overskrift -ml-1.5 text-rust-500 lg:-ml-2">Stil</p>
               <div class="bar2">
                 <a href="abonnement2.html"
                   ><div class="ball2">
@@ -149,7 +158,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-2 text-rust-200 lg:-ml-5">Duft</p>
+              <p class="overskrift -ml-2 text-rust-500 lg:-ml-5">Duft</p>
               <div class="bar3">
                 <a href="abonnement3.html"
                   ><div class="ball3">
@@ -160,7 +169,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-6 text-rust-200 lg:-ml-14">Hyppighed</p>
+              <p class="overskrift -ml-6 text-rust-500 lg:-ml-14">Hyppighed</p>
               <div class="bar4">
                 <a href="abonnement4.html"
                   ><div class="ball4">
@@ -171,136 +180,42 @@
             </div>
           </div>
         </article>
+        <!-- PROGRESS BAR SLUT -->
       </section>
-      <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
       <section class="text-center">
         <h1 class="font-main-heading text-h1-mobile">
-          Hvilken størrelse buket ønsker du?
+          Hvor ofte vil du have din buket leveret?
         </h1>
-        <p
+        <article
           class="mx-auto py-l-spacing-mobile text-left font-font-body text-body-mobile"
         >
-          Du kan vælge mellem 4 forskellige størrelser af buket; mini, lille,
-          mellem og stor. Størrelsen har ingen påvirkning på designet af
-          buketten, kun størrelsen!
-        </p>
+          <h2 class="">
+            Hvor tit skal vi komme med dine nye, personlige buketter? Vi glæder
+            os til at levere dem til dig!
+          </h2>
+        </article>
       </section>
 
       <!---------------------------------------------- ANDEN SEKTION -->
-      <section class="flex flex-wrap gap-l-spacing-mobile pb-l-spacing-mobile">
-        <!-- CARD 1 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
-          </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 60x50x40 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Mini</p>
-              <p>400,- DKK</p>
-            </div>
-          </div>
-        </article>
-
-        <!-- CARD 2 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
-          </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 60x50x40 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Lille</p>
-              <p>600,- DKK</p>
-            </div>
-          </div>
-        </article>
-
-        <!-- CARD 3 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
-          </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 80x60x50 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Mellem</p>
-              <p>800,- DKK</p>
-            </div>
-          </div>
-        </article>
-
-        <!-- CARD 4 -->
-        <article
-          class="max-w-abb-card-mobile rounded-radius-mobile border-2 border-color-black hover:scale-105 lg:max-w-abb-card-desktop"
-        >
-          <div class="img_wrapper">
-            <img
-              class="max-w-abb-card-mobile lg:max-w-abb-card-desktop"
-              src="/img/abonnement_filler.webp"
-              alt=""
-            />
-          </div>
-          <div
-            class="info_wrapper border-t-2 border-color-black bg-rust-100 p-3 font-font-body text-abonnement-text-info lg:text-h4-desktop"
-          >
-            <p
-              class="spand color-black pb-2 text-abonnement-text-spand lg:text-body-desktop"
-            >
-              Spandens mål: 80x60x50 cm
-            </p>
-            <div class="info flex justify-between">
-              <p>Stor</p>
-              <p>1000,- DKK</p>
-            </div>
-          </div>
-        </article>
-      </section>
+      <select
+        class="max-w-xs mx-auto flex w-64 rounded-radius-mobile border-2 border-color-black font-font-body"
+      >
+        <option disabled selected>-- Vælg hyppighed --</option>
+        <option class="active:bg-sol">Hver uge</option>
+        <option>Hveranden uge</option>
+        <option>Hver måned</option>
+      </select>
 
       <!---------------------------------------------- TREDJE SEKTION -->
-      <section class="flex place-content-center pb-xxl-spacing-mobile">
-        <a href="abonnement2.html"
+      <section
+        class="flex place-content-center pt-l-spacing-mobile pb-xxl-spacing-mobile"
+      >
+        <a href="index.html"
           ><button
             class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
           >
-            Næste trin
+            Tilføj til kurv
           </button></a
         >
       </section>
