--- a/src/index.html
+++ b/src/index.html
@@ -953,9 +953,7 @@
             </ul>
           </div>
           <li>
-            <a
-              href="banner_test.html"
-              class="font-other-headings text-h3-mobile"
+            <a href="" class="font-other-headings text-h3-mobile"
               >Begivenheder</a
             >
           </li>
