--- a/src/kurv.html
+++ b/src/kurv.html
@@ -301,6 +301,7 @@
           </div>
         </article>
       </section>
+      <a href="banner_test.html">banner</a>
     </main>
   </body>
 </html>
